First version of blood_sugar_simulator!

--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -4,3 +4,7 @@
 
 %h3
   Please add food and time (food was consumed)
+
+
+%p
+  = link_to 'Test Simulation with 2 food entered at 7am and 8am', glycemic_graph_simulations_path
