Exercise rate should be subtracted if present.

--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -5,6 +5,8 @@
 %h3
   Please add food and time (food was consumed)
 
+%p
+  Input fields coming soon...
 
 %p
-  = link_to 'Test Simulation with 2 food entered at 7am and 8am', glycemic_graph_simulations_path
+  = link_to 'Test Simulation with 2 food entered (wheat tortilla and orange juice) at 7am and 8am', glycemic_graph_simulations_path
